Correct box_2 in mid section to align properly with box 1

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -103,7 +103,7 @@ header a {
   display: flex;
   width: 60%;
   flex-flow: column wrap;
-  padding: 2rem 1.5rem;
+  margin: 2rem 1.5rem;
 }
 
 .box_1 img {
@@ -120,8 +120,9 @@ header a {
   display: flex;
   width: 40%;
   flex-flow: column;
-  justify-content: center;
+  justify-content: flex-start;
   border-left: 1px solid lightgray;
+  padding-top: 2rem;
 }
 
 .box_2 img {
@@ -133,6 +134,10 @@ header a {
 .box_2_1 {
   display: flex;
   align-items: center;
+}
+
+.box_2_1 img {
+  padding-top: 0;
 }
 
 .box_2_2 {
